fix:build fix for 2378 issue