@@ -25,6 +25,7 @@
 package com.iluwatar.combinator;
 
 import java.util.ArrayList;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -94,7 +95,7 @@ public class Finders {
   }
 
   private static Finder identMult() {
-    return txt -> Stream.of(txt.split("\n")).toList();
+    return txt -> Stream.of(txt.split("\n")).collect(Collectors.toList());
   }
 
   private static Finder identSum() {
